fix(compute): CHG-121 early-signal settlement guarantee + CHG-120 C2 drill closure
Every early-signal TENTATIVE now settles (CONFIRM/CANCEL) across TM-kill
recovery, and the C2 TM-kill-at-full-load drill passes all gates.

CHG-121 (settlement): durable tentative markers (Signal_Tentative_Markers
KV) with fully async marker I/O — the task thread never blocks on Fluss;
marker-durable-before-LOG-row ordering; markers cleared on every settle
path (early-confirm, normal, late-drop). Five root causes fixed, each
pinned by a guard: transient markerHook (serialization round-trip test),
permanent lookup-failure drop (bounded retry), end-of-run backlog
(drill drain phase G-TMK-10c), settle-path marker leaks
(everySettlePathClearsItsMarker), and the G7c/F4 wall-clock trailing
cutoff misreading never-closed tail windows as loss (event-horizon bound,
f4_orphan_check extracted + 8 tests).

CHG-120 (drill hardening): tm-kill-full-load.sh smoke/main modes,
G-TMK-10b single-restart gate, drain gate, tolerable-failed-checkpoints=3,
reset-aware progress guards, G7 parity suite.

Validation: main drill tm-kill-full-load-20260902-121511 PASS — G7c
33,792 windows/0 mismatches, F4 0 orphans, single kill-induced restart,
recovery 52s, drain completed. Suites: compute 432/432
(EarlySignalFunctionTest 18/18), scripts tests incl. 30/30 G7 parity,
docs-audit all-pass. Docs updated per annotate-don't-rewrite: change
records closed, throughput investigation RESOLVED, signal-job dossier,
runbook env keys + drill ops, chaos-suite supplement, AC-SS-008 PASSED.